fix the z-index in sidebar

--- a/frontend/src/static/js/components/page-layout/PageSidebar.scss
+++ b/frontend/src/static/js/components/page-layout/PageSidebar.scss
@@ -28,7 +28,7 @@
   z-index: +20;
 
   @media (min-width: 768px) {
-    z-index: +5;
+    z-index: +20;
   }
 
   position: fixed;
